Add bg-primary in dropdown items, the default one is white so the items are not visiale

--- a/Uplift/Views/Shared/_Layout.cshtml
+++ b/Uplift/Views/Shared/_Layout.cshtml
@@ -50,10 +50,10 @@
                                     Content Management
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropDown">
-                                    <a class="dropdown-item bg-primary text-white" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                                    <a class="dropdown-item bg-primary text-white" asp-area="Admin" asp-controller="Frequency" asp-action="Index">Frequency</a>
-                                    <a class="dropdown-item bg-primary text-white" asp-area="Admin" asp-controller="Service" asp-action="Index">Service</a>
-                                    <a class="dropdown-item bg-primary text-white" asp-area="Admin" asp-controller="WebImage" asp-action="Index">Image Uploader</a>
+                                    <a class="dropdown-item bg-primary text-white bg-primary" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+                                    <a class="dropdown-item bg-primary text-white bg-primary" asp-area="Admin" asp-controller="Frequency" asp-action="Index">Frequency</a>
+                                    <a class="dropdown-item bg-primary text-white bg-primary" asp-area="Admin" asp-controller="Service" asp-action="Index">Service</a>
+                                    <a class="dropdown-item bg-primary text-white bg-primary" asp-area="Admin" asp-controller="WebImage" asp-action="Index">Image Uploader</a>
                                     @if (User.IsInRole(SD.Admin))
                                     {
                                         <a class="dropdown-item text-white" asp-area="Admin" asp-controller="User" asp-action="Index">User</a>
