Make a restriction for positive numbers only

--- a/Uplift/Areas/Admin/Views/Category/Upsert.cshtml
+++ b/Uplift/Areas/Admin/Views/Category/Upsert.cshtml
@@ -34,7 +34,7 @@
                     <label asp-for="DisplayOrder"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="DisplayOrder" class="form-control" />
+                    <input asp-for="DisplayOrder" type="number" min="0" class="form-control" />
                     <span asp-validation-for="DisplayOrder" class="text-danger"></span>
                 </div>
             </div>
