--- a/Uplift/Areas/Admin/Views/Category/Index.cshtml
+++ b/Uplift/Areas/Admin/Views/Category/Index.cshtml
@@ -13,19 +13,19 @@
             <a asp-action="Upsert" class="btn btn-primary"><i class="fas fa-plus"></i> &nbsp; Create New Category</a>
         </div>
     </div>
-
-    <br />
-    <br />
-
-    <table id="tblData" class="table table-striped table-bordered" style="width:100%">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Display Order</th>
-                <th></th>
-            </tr>
-        </thead>
-    </table>
+    <div class="row">
+        <div class="col-12">
+            <table id="tblData" class="table table-striped table-bordered" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Display Order</th>
+                        <th></th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+    </div>
 </div>
 
 @section Scripts{ 
